refactoring completed. Working version.

--- a/client/code/Makefile
+++ b/client/code/Makefile
@@ -1,6 +1,7 @@
 
 SERVER=130.237.218.85
 PORT=7777
+# 7777 many boards
 # 7778 trivial boards
 # 7781 and 7782 have similar difficulty to the ones used in evaluation
 
@@ -11,7 +12,7 @@ all: build
 build: client
 
 client: *.cc *.h
-	g++-mp-4.5 --std=gnu++0x *.cc $(CXXFLAGS) -g -o client
+	g++-mp-4.5 --std=gnu++0x *.cc $(CXXFLAGS) -g -Wall -o client
 
 run: client
 	./client $(SERVER) $(PORT) $(BOARD)
