some crazy bash foo to test performance on a range of boards

--- a/client/code/Makefile
+++ b/client/code/Makefile
@@ -6,6 +6,10 @@ PORT=7777
 # 7781 and 7782 have similar difficulty to the ones used in evaluation
 
 BOARD=1
+LASTBOARD=100
+OPTIONS=
+#OPTIONS=playsol 10
+TIMEOUT=10 # timeout for testing
 
 
 
@@ -24,7 +28,7 @@ client: *.cc *.h
 	$(CPP) --std=gnu++0x *.cc $(CXXFLAGS) -g -Wall -o client
 
 run: client
-	./client $(SERVER) $(PORT) $(BOARD)
+	./client $(SERVER) $(PORT) $(BOARD) $(OPTIONS)
 
 build-opt: client-opt
 
@@ -32,7 +36,18 @@ client-opt: *.cc *.h
 	$(CPP) --std=gnu++0x *.cc $(CXXFLAGS) -O3 -DNDEBUG -o client-opt
 
 run-opt: client-opt
-	./client-opt $(SERVER) $(PORT) $(BOARD)
+	./client-opt $(SERVER) $(PORT) $(BOARD) $(OPTIONS)
+
+test: client-opt
+	rm -f tmp_pipe1___
+	mkfifo tmp_pipe1___
+	(for i in {$(BOARD)..$(LASTBOARD)} ; do echo ">>> $$i" 1>&2 && $(MAKE) \
+			run-opt SERVER=$(SERVER) PORT=$(PORT) BOARD=$$i OPTIONS=$(TIMEOUT) \
+			| tee -a test-boards.log | grep "CORRECT\|timeout" ; done && \
+			echo "Number of boards solved in under $$TIMEOUT seconds:" ) 2>&1 \
+			| tee tmp_pipe1___ | grep "CORRECT" | wc -l & \
+	cat < tmp_pipe1___
+	rm -f tmp_pipe1___
 
 clean:
-	rm client client-opt
+	rm -f client client-opt tmp_pipe1___
