--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /movers_and_packers-milestone.zip
 /client/code/.settings/org.eclipse.cdt.codan.core.prefs
 /client/code/.settings/org.eclipse.cdt.core.prefs
+/client/code2
