--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /client/code/.settings/org.eclipse.cdt.codan.core.prefs
 /client/code/.settings/org.eclipse.cdt.core.prefs
 /client/code2
+/client/code/test-boards.log
